# aims-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dataset.yaml  training.yaml
notebooks/: final_report_template.ipynb
scripts/: feature_importance.py  generate_dataset.py  generate_dataset_from_config.py  run_single_simulation.py  train_from_config.py  train_models.py
src/aims_ml/: __init__.py  config.py  dataset.py  materials.py  ml.py  simulation.py  visualization.py
tests/: test_dataset_ml.py  test_simulation.py  test_visualization.py
