[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aims-ml"
version = "0.1.0"
description = "ML surrogate modeling for radiation damage cascade simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "plotly>=5.20",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "pymatgen>=2024.5.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
